[tool.poetry]
name = "improved-fvd"
version = "0.1.0"
description = ""
authors = ["GangFaDeShenMe <54745033+GangFaDeShenMe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
